Add golang role

--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -1,16 +1,36 @@
-- hosts: all
+---
+- hosts: manager
+  # vars:
+  #   proxy_env:
+  #     HTTP_PROXY: http://192.168.1.3:8123
+  #     HTTPS_PROXY: https://192.168.1.3:8123
+  vars_files:
+    - vars/kubernetes.yml
   roles:
     - role: docker
     - role: kubernetes
-  vars:
-    # proxy_env:
-    #   HTTP_PROXY: http://192.168.1.3:8123
-    #   HTTPS_PROXY: https://192.168.1.3:8123
+      node: manager
+  tags: manager
 
-    # Need to update to 1.12.2. More info see https://github.com/kubernetes/kubernetes/issues/69503
-    kubernetes:
-      version: v1.12.1
-      dep_images: 
-        - pause:3.1
-        - etcd:3.2.24
-        - coredns:1.2.2
+- hosts: worker
+  vars_files:
+    - local_vars/kubernetes.yml
+  roles:
+    - role: docker
+    - role: kubernetes
+      node: worker
+  tags: worker
+
+- hosts: reset
+  roles:
+    - role: docker
+    - role: kubernetes
+      operation: reset
+  tags: reset
+
+- hosts: list_kubeadm_images
+  roles:
+    - role: docker
+    - role: kubernetes
+      operation: list_kubeadm_images
+  tags: list_kubeadm_images
