--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,5 @@
 - src: https://github.com/zzet/ansible-rbenv-role
   version: 3.4.1
   name: rbenv
+- src: https://github.com/jlund/ansible-go
+  name: go
