--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -5,7 +5,7 @@
   #     HTTP_PROXY: http://192.168.1.3:8123
   #     HTTPS_PROXY: https://192.168.1.3:8123
   vars_files:
-    - vars/kubernetes.yml
+    - local_vars/kubernetes.yml
   roles:
     - role: docker
     - role: kubernetes
