--- a/roles/kubernetes/tasks/worker.yml
+++ b/roles/kubernetes/tasks/worker.yml
@@ -2,20 +2,11 @@
 - name: Pull kube-proxy image
   shell: |
     bash -c "
-    docker pull gcr.mirrors.ustc.edu.cn/google-containers/{{ item }}:{{ kubernetes.version }}
-    docker tag gcr.mirrors.ustc.edu.cn/google-containers/{{ item }}:{{ kubernetes.version }} k8s.gcr.io/{{ item  }}:{{ kubernetes.version }}
+    docker pull {{ kubernetes.mirror }}/{{ item }}:{{ kubernetes.version }}
+    docker tag {{ kubernetes.mirror }}/{{ item }}:{{ kubernetes.version }} k8s.gcr.io/{{ item  }}:{{ kubernetes.version }}
     "
   with_items:
     - kube-proxy
-  become: true
-
-- name: Pull kubernetes worker dependent images
-  shell: |
-    bash -c "
-    docker pull gcr.mirrors.ustc.edu.cn/google-containers/{{ item }}
-    docker tag gcr.mirrors.ustc.edu.cn/google-containers/{{ item }} k8s.gcr.io/{{ item  }}
-    "
-  with_items: "{{ kubernetes.worker_dep_images }}"
   become: true
 
 - import_tasks: images.yml
