--- a/requirements.yml
+++ b/requirements.yml
@@ -6,3 +6,17 @@
 - src: https://github.com/geerlingguy/ansible-role-docker
   version: 2.5.2
   name: docker
+# - src: https://github.com/geerlingguy/ansible-role-git
+#   version: 2.0.5
+#   name: git
+- src: https://github.com/morgangraphics/ansible-role-nvm
+  name: nvm
+- src: https://github.com/azavea/ansible-pip
+  version: 2.0.0
+  name: pip
+- src: https://github.com/geerlingguy/ansible-role-repo-epel
+  version: 1.2.4
+  name: repo-epel
+- src: https://github.com/linuxhq/ansible-role-ius
+  version: v0.0.8
+  name: repo-ius
