--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -2,32 +2,24 @@
 - import_tasks: debian.yml
   when: ansible_os_family == 'Debian'
 
-- name: Remove existing vim
-  apt: name={{ item }} state=absent
-  with_items:
-    - vim
-    - vim-runtime
-    - gvim
-  become: true
+- import_tasks: redhat.yml
+  when: ansible_os_family == 'RedHat'
 
 - shell: type vim
   register: vim_result
   ignore_errors: True
 
 - name: Download vim source
-  shell: git clone --branch v{{ vim_version }} --depth 1 https://github.com/vim/vim.git /tmp/build/vim
-  args:
-    creates: /tmp/build/vim/
-  become: true
+  shell: git clone --branch v{{ vim_version }} --depth 1 https://github.com/vim/vim.git /tmp/vim
   when: vim_result.rc != 0
 
-- name: Make and install vim
+- name: Configure vim
   shell: |
     ./configure --with-features=huge \
         --enable-multibyte \
         --enable-rubyinterp=yes \
         --enable-pythoninterp=yes \
-        --with-python-config-dir=/usr/lib/python2.7/config-x86_64-linux-gnu \
+        --with-python-config-dir={{ '/lib64/python2.7/config' if ansible_os_family == 'RedHat' else '/usr/lib/python2.7/config-x86_64-linux-gnu' }} \
         --enable-python3interp=yes \
         --with-python3-config-dir=/usr/lib/python3.5/config-3.5m-x86_64-linux-gnu \
         --enable-perlinterp=yes \
@@ -35,14 +27,29 @@
         --enable-gui=gtk2 \
         --enable-cscope \
         --prefix=/usr/local
-    checkinstall --maintainer=uzxmx --pkgname=vim --pkgversion={{ vim_version }} -y
   args:
-    chdir: /tmp/build/vim
+    chdir: /tmp/vim
   become: true
   when: vim_result.rc != 0
 
-- name: Remove vim build directory
+- name: Make and install vim
+  shell: checkinstall --maintainer=uzxmx --pkgname=vim --pkgversion={{ vim_version }} -y
+  args:
+    chdir: /tmp/vim
+  become: true
+  when: vim_result.rc != 0 and ansible_os_family == 'Debian'
+
+- name: Make and install vim
+  shell: |
+    make VIMRUNTIMEDIR=/usr/local/share/vim/vim81
+    make install
+  args:
+    chdir: /tmp/vim
+  become: true
+  when: vim_result.rc != 0 and ansible_os_family == 'RedHat'
+
+- name: Clean
   file:
-    path: /tmp/build/vim
+    path: /tmp/vim
     state: absent
   become: true
