--- a/roles/monkeypatches/tasks/main.yml
+++ b/roles/monkeypatches/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - include_role:
     name: pip
-  become: true
+    apply:
+      become: true
 
 - name: Install pexpect
   pip:
     name: pexpect
   become: true
-
