--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -6,9 +6,5 @@
 - import_tasks: install_from_source.yml
   when: nvim_result.rc != 0 and nvim.install_from_source
 
-- name: Install nvim
-  shell: |
-    yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-    yum install -y neovim python3-neovim
-  become: true
-  when: nvim_result.rc != 0 and ansible_os_family == 'RedHat'
+- import_tasks: install_prebuilt.yml
+  when: nvim_result.rc != 0 and (not nvim.install_from_source)
