--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -1,35 +1,50 @@
 ---
-- hosts: dotfiles
+- hosts: "{{ host | default('dotfiles') }}"
   tasks:
-    - name: setup proxy for curl
+    - shell: uname -r | grep 'Microsoft$'
+      ignore_errors: true
+      register: result
+    - set_fact:
+        local: "{{ ansible_connection == 'local' }}"
+        wsl: "{{ result.rc == 0 }}"
+    - name: Update apt sources
       shell: |
-        echo "proxy = {{ curl_proxy }}" >~/.curlrc
-        echo "proxy = {{ curl_proxy }}" | sudo tee /root/.curlrc >/dev/null
-      when: curl_proxy and curl_proxy | length > 0
+        sed -i.bak -Ee 's:[0-9a-zA-Z]+\.ubuntu\.com/ubuntu/:mirrors.tuna.tsinghua.edu.cn/ubuntu/:' /etc/apt/sources.list
+        apt-get update
+      become: true
+      when: ansible_os_family == 'Debian'
+    - name: setup proxy for curl
+      shell: echo "proxy = {{ curl_proxy }}" >~/.curlrc
+      when: curl_proxy is defined and curl_proxy | length > 0
+    - name: setup proxy for curl as root
+      shell: echo "proxy = {{ curl_proxy }}" >/root/.curlrc
+      become: true
+      when: curl_proxy is defined and curl_proxy | length > 0
 
-- hosts: dotfiles
+- hosts: "{{ host | default('dotfiles') }}"
   roles:
     - role: monkeypatches
       become: true
+      when: not local
     - git
     - zsh
     - rcm
 
-- hosts: dotfiles
+- hosts: "{{ host | default('dotfiles') }}"
   tasks:
     - name: set git http proxy
       shell: git config --global http.proxy {{ git_http_proxy }}
-      when: git_http_proxy and git_http_proxy | length > 0
+      when: git_http_proxy is defined and git_http_proxy | length > 0
     - name: set git https proxy
       shell: git config --global https.proxy {{ git_https_proxy }}
-      when: git_https_proxy and git_https_proxy | length > 0
+      when: git_https_proxy is defined and git_https_proxy | length > 0
 
-- hosts: dotfiles
+- hosts: "{{ host | default('dotfiles') }}"
   roles:
     - tmux
     - nvim
 
-- hosts: dotfiles
+- hosts: "{{ host | default('dotfiles') }}"
   tasks:
     - name: clone or update dotfiles
       shell: |
@@ -57,36 +72,47 @@
           rm -rf ~/.dotfiles
           git clone --depth 1 --recurse-submodules https://github.com/uzxmx/dotfiles.git ~/.dotfiles
         fi
+      when: not local
     - name: run rcup
       shell: zsh -ic "env RCRC=$(ls -d ~)/.dotfiles/rcrc rcup -f" >/tmp/rcup.log 2>&1
-    - name: replace asdf-exec
-      shell: |
-        if [ ! -e ~/.asdf/bin/private/asdf-exec ] || file -b ~/.asdf/bin/private/asdf-exec | grep 'ASCII text' &>/dev/null; then
-          rm -f ~/.asdf/bin/private/asdf-exec
-          curl -L -o ~/.asdf/bin/private/asdf-exec https://github.com/danhper/asdf-exec/releases/download/v0.1.2/asdf-exec-linux-x64
-          chmod a+x ~/.asdf/bin/private/asdf-exec
-          sed -i.bak -e 's|exec $(asdf_dir)/bin/asdf exec|exec $(asdf_dir)/bin/private/asdf-exec|' ~/.asdf/lib/commands/reshim.sh
-          rm ~/.asdf/shims/*
-          zsh -ic "asdf reshim"
-        else
-          true
-        fi
+    # - name: replace asdf-exec
+    #   shell: |
+    #     if [ ! -e ~/.asdf/bin/private/asdf-exec ] || file -b ~/.asdf/bin/private/asdf-exec | grep 'ASCII text' &>/dev/null; then
+    #       rm -f ~/.asdf/bin/private/asdf-exec
+    #       curl -L -o ~/.asdf/bin/private/asdf-exec https://github.com/danhper/asdf-exec/releases/download/v0.1.2/asdf-exec-linux-x64
+    #       chmod a+x ~/.asdf/bin/private/asdf-exec
+    #       sed -i.bak -e 's|exec $(asdf_dir)/bin/asdf exec|exec $(asdf_dir)/bin/private/asdf-exec|' ~/.asdf/lib/commands/reshim.sh
+    #       rm ~/.asdf/shims/*
+    #       zsh -ic "asdf reshim"
+    #     else
+    #       true
+    #     fi
     - name: install vim plugins
       shell: zsh -ic "vi '+PlugInstall' '+qa'"
 
-- hosts: dotfiles
+- hosts: "{{ host | default('dotfiles') }}"
+  tasks:
+    - package: name={{ item }} state=present
+      with_items:
+        - expect
+        - tcllib
+      become: true
+      when: wsl
+  roles:
+    - ssh
+
+- hosts: "{{ host | default('dotfiles') }}"
   tasks:
     - name: unset git http proxy
       shell: git config --global --unset http.proxy
-      when: git_http_proxy and git_http_proxy | length > 0
+      when: git_http_proxy is defined and git_http_proxy | length > 0
     - name: unset git https proxy
       shell: git config --global --unset https.proxy
-      when: git_https_proxy and git_https_proxy | length > 0
-
-- hosts: dotfiles
-  tasks:
+      when: git_https_proxy is defined and git_https_proxy | length > 0
     - name: unset proxy for curl
-      shell: |
-        rm ~/.curlrc
-        sudo rm /root/.curlrc
-      when: curl_proxy and curl_proxy | length > 0
+      shell: rm ~/.curlrc
+      when: curl_proxy is defined and curl_proxy | length > 0
+    - name: unset proxy for curl as root
+      shell: rm /root/.curlrc
+      become: true
+      when: curl_proxy is defined and curl_proxy | length > 0
