--- a/roles/nvim/tasks/install_prebuilt.yml
+++ b/roles/nvim/tasks/install_prebuilt.yml
@@ -2,7 +2,7 @@
 - name: Download nvim
   command: curl -L -C - -o /tmp/nvim.tar.gz https://github.com/neovim/neovim/releases/download/v{{ nvim.version }}/nvim-linux64.tar.gz
   become: true
-  when: ansible_os_family == 'RedHat'
+  when: ansible_os_family == 'RedHat' or ansible_os_family == 'Debian'
 
 - name: Install nvim
   command: tar zxf /tmp/nvim.tar.gz -C /usr --strip-components=1
